# flask-directory-listing

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: publish.yml
apache/: docker-compose.yaml
assets/: fetch_icons.sh
assets/icons/: small
src/flask-directory-listing/: __main__.py
src/flask-directory-listing/templates/: index.html
src/flask_directory_listing/: __main__.py
src/flask_directory_listing/templates/: index.html
templates/: index.html
