[project]
name = "flask-directory-listing"
version = "0.0.1"
dependencies = [
  "Flask",
]
requires-python = ">=3.9"
authors = [
  { name="Phoenixthrush UwU", email="contact@phoenixthrush.com" },
]
maintainers = [
  { name="Phoenixthrush UwU", email="contact@phoenixthrush.com" }
]
description = "Flask app that replicates Apache-style directory listings. Supports file uploads and folder downloads as ZIP archives."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["flask", "directory", "listing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/phoenixthrush/flask-directory-listing"
Documentation = "https://github.com/phoenixthrush/flask-directory-listing/blob/main/README.md"
Repository = "https://github.com/phoenixthrush/flask-directory-listing.git"
"Bug Tracker" = "https://github.com/phoenixthrush/flask-directory-listing/issues"
Changelog = "https://github.com/phoenixthrush/flask-directory-listing/commits"
"Source Code" = "https://github.com/phoenixthrush/flask-directory-listing"
"Download" = "https://github.com/phoenixthrush/flask-directory-listing/archive/refs/heads/main.zip"
Funding = "https://github.com/sponsors/phoenixthrush"

[project.scripts]
flask-directory-listing = "flask_directory_listing.__main__:main"